--- a/css/home.css
+++ b/css/home.css
@@ -27,7 +27,7 @@ header {
   font-size: 20px;
 }
 
-.menu-toggle {
+.menu-btn {
   background: transparent;
   border: none;
   font-weight: 700;
@@ -64,7 +64,7 @@ header {
 }
 
 .sidebar-nav a {
-  color: #fff;
+  color: #111;
   text-decoration: none;
   font-size: 18px;
   padding: 10px 20px;
